.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_Form_Field_Import__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>EchoSign Form Field Imports</relationshipLabel>
        <relationshipName>EchoSign_Form_Field_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping__c</fullName>
        <label>Salesforce to EchoSign Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>EchoSign Form Field Imports</relationshipLabel>
        <relationshipName>EchoSign_Form_Field_Imports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <label>Document Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Duplicate_Form_Fields__c</fullName>
        <label>Duplicate Form Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Fields__c</fullName>
        <label>Form Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EchoSign Form Field Import</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>EchoSign Form Field Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EchoSign Form Field Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>